feat: feat status update api
